<resources>
    <string name="app_name">SettingsDesign</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="name">David Clerisseau</string>
    <string name="help">Help</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="option">English</string>
    <string name="preference">On</string>
    <string name="upload_image">Upload Image</string>
    <string name="photo">Photo</string>
    <string name="userName">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name='email'>Email</string>
    <string name='contact'>Contact</string>
    <string name="_age">28</string>
    <string name="mail_id">clerisseau@gmail.com</string>
    <string name='phNo'>+91 9789620280</string>
    <string name="about">About</string>
    <string name="version">Android Version</string>
    <string name="version_name">Android 11</string>
    <string name="device">Device Name</string>
    <string name="device_name">Redmi Note 8 Pro</string>
    <string name="date">20-12-2022</string>
    <string name="last_update">Last Security Update</string>
    <string name="ui">MIUI Version</string>
    <string name="ui_version">MIUI Global 12.5.10</string>
    <string name="storage">Storage</string>
    <string name="capacity">67.0 GB / 128 GB</string>
    <string name="about_name">About</string>


</resources>