<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet_1"
    tools:context=".AboutActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back_btn_01"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="55dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="37dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="336dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/submit_btn_01"
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="31dp"
                android:background="@drawable/ic_submit_btn"
                android:src="@drawable/ic_baseline_done_24" />

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="120dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />


        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="280dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="@string/ui"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <EditText
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="2dp"
                android:backgroundTint="@color/bottom_line_color"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:text="@string/ui_version"
                android:textColor="@color/white" />


        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="200dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/device"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="@string/device"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <EditText
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="2dp"
                android:backgroundTint="@color/bottom_line_color"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:text="@string/device_name"
                android:textColor="@color/white" />


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="360dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="@string/version"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="2dp"
                android:backgroundTint="@color/bottom_line_color"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:text="@string/version_name"
                android:textColor="@color/white" />


        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="440dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="@string/last_update"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <EditText
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="2dp"
                android:backgroundTint="@color/bottom_line_color"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:text="@string/date"
                android:textColor="@color/white" />


        </RelativeLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="520dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="@string/storage"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <EditText
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="2dp"
                android:backgroundTint="@color/bottom_line_color"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:text="@string/capacity"
                android:textColor="@color/white" />


        </RelativeLayout>

    </LinearLayout>

</FrameLayout>