<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <TextView

        android:id="@+id/Setting"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="200dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/Account"
        android:layout_width="98dp"
        android:layout_height="37dp"
        android:layout_below="@+id/Setting"
        android:layout_marginStart="42dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="42dp"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profile"
        android:layout_width="92dp"
        android:layout_height="70dp"
        android:layout_below="@+id/Account"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/ic_btn_bg"
        android:padding="10dp"
        android:src="@drawable/ic_profile" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_alignStart="@+id/profile"
        android:layout_alignParentTop="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="205dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UnknownId">


        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="SmallSp,UnknownId" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/name"
            android:textColor="@color/grey"
            android:textSize="15sp"
            tools:ignore="SmallSp,UnknownId" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button2"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/ic_btn_bg"
        android:src="@drawable/ic_baseline_keyboard_arrow_right"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="98dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="313dp"
        android:layout_marginEnd="30dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="398dp"
        android:background="@drawable/ic_language"
        android:padding="20dp"
        android:src="@drawable/ic_baseline_language_24" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="511dp"
        android:background="@drawable/ic_notification"
        android:padding="20dp"
        android:src="@drawable/ic_baseline_notifications_24" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="627dp"
        android:background="@drawable/ic_dnd"
        android:padding="20dp"
        android:src="@drawable/ic_baseline_bedtime_24" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="745dp"
        android:background="@drawable/ic_help"
        android:padding="20dp"
        android:src="@drawable/ic_baseline_help_24" />

    <TextView
        android:id="@+id/language"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="153dp"
        android:text="@string/language"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/notification"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="153dp"
        android:layout_marginBottom="301dp"
        android:text="@string/notification"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/darkMode"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="153dp"
        android:layout_marginBottom="181dp"
        android:text="@string/dark_mode"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/help"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="153dp"
        android:layout_marginBottom="63dp"
        android:text="@string/help"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/language_opted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="87dp"
        android:layout_toEndOf="@+id/language"
        android:text="@string/option"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="196dp"
        android:text="@string/preference"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button3"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="407dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/ic_btn_bg"
        android:src="@drawable/ic_baseline_keyboard_arrow_right" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button4"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="526dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/ic_btn_bg"
        android:src="@drawable/ic_baseline_keyboard_arrow_right" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button5"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="748dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/ic_btn_bg"
        android:src="@drawable/ic_baseline_keyboard_arrow_right" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="192dp"
        android:checked="true"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="335dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />


</RelativeLayout>